--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -36,6 +36,8 @@ registry:
 # Configure builder setup.
 builder:
   arch: amd64
+  args:
+    NODE_VERSION: 20
   # Pass in additional build args needed for your Dockerfile.
   # args:
   #   RUBY_VERSION: <%= File.read('.ruby-version').strip %>
