--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -55,8 +55,8 @@ builder:
 
 # Use a different ssh user than root
 #
-# ssh:
-#   user: app
+ssh:
+  user: ubuntu
 
 # Use a persistent storage volume.
 #
