--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,7 +7,7 @@ image: iamademar/agility-automation
 # Deploy to these servers.
 servers:
   web:
-    - 3.107.185.68
+    - 54.206.122.67
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,7 +19,7 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: agilityautomation.ademartutor.com
+  host: agilityapp.ademartutor.com
   app_port: 80
 
 # Credentials for your image host.
@@ -42,7 +42,7 @@ builder:
 #
 env:
   clear:
-    NEXT_PUBLIC_API_URL: https://agilityautomationapi.ademartutor.com
+    NEXT_PUBLIC_API_URL: https://agilityapi.ademartutor.com
 #     DB_HOST: 192.168.0.2
 #   secret:
 #     - RAILS_MASTER_KEY
